# kyute-old

./: .gitmodules  Cargo.toml  GUI.md  TODO.md
artifice/: Cargo.toml
artifice/src/: main.rs
kyute/: Cargo.toml
kyute-shell/: Cargo.toml
kyute-shell/examples/: simple.rs
kyute-shell/src/: lib.rs  platform.rs  window.rs
kyute-shell/src/drawing/: context.rs  mod.rs  path.rs
kyute-shell/src/imaging/: mod.rs
kyute-shell/src/text/: mod.rs
kyute-shell/tests/: simple.rs
kyute/examples/: call_graph.rs  derive_model.rs  window.rs
kyute/macros/: Cargo.toml
kyute/macros/src/: composable.rs  data.rs  lib.rs  model.rs  view.rs
kyute/src/: application.rs  binding.rs  cache.rs  cache_cell.rs  call_key.rs  composition.rs  context.rs  core.rs  core2.rs  data.rs  default_style.rs  env.rs  event.rs  key.rs  layout.rs  lib.rs  theme.rs  visual.rs  window.rs
kyute/src/model/: lens.rs  mod.rs
kyute/src/node/: mod.rs
kyute/src/style/: mod.rs
kyute/src/widget/: button.rs  container.rs  flex.rs  gap_buffer.rs  grid.rs  mod.rs  scope_table.rs  slider.rs  text.rs  textedit.rs
kyute/tests/: composition.rs  node_tree.rs
