[package]
name = "kyute"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"


[dependencies]
kyute-shell = { path="../kyute-shell" }
tracing = { version = "0.1.25", features = ["attributes"] }
euclid = "0.22"
keyboard-types = "0.6.1"
fnv = "1.0.7"
unicode-segmentation = "1.8.0"
palette = "0.6.0"
bitflags = "1.3.1"

[dev-dependencies]
tracing-subscriber = { version = "0.2.19", features = ["fmt"] }

