[package]
name = "kyute-macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.10"
syn = { version = "1.0.80", features = ["full"] }
proc-macro2 =  { version = "1.0.29",  features = ["span-locations"] }

[lib]
proc-macro = true